[package]
name = "mapo"
description = "A(nother) graph drawing library"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
to_precision = "0.1.1"
piet-common = "0.5.0"

[dev-dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "45567785" }
anyhow = "1.0.28"
csv = "1.1.3"
fake = "2.4.3"
rand = "0.8.4"
rand_distr = "0.4.3"
piet-common = "0.5.0"
qu = "0.4.2"
clap = "3.0.14"
